state_machine_procmacro/tests/trybuild/struct_event_variant_fail.stderr
error: Struct variants are not supported for events
 --> $DIR/struct_event_variant_fail.rs:6:12
  |
6 |     One --(A{foo: String}, on_a)--> Two
  |            ^
